--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Portafolio Lucas Sanchez"/>
+    <meta property="og:description" content="Bienvenidos a mi portafolio">
+    
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://portafoliolucassanchez.netlify.app"/>
+    <meta property="og:image" content="https://media.discordapp.net/attachments/840594433560019015/1229248646911098970/image.png?ex=662efe03&is=661c8903&hm=3df22fcf0a2fb3e83da6f7e23765c6af36548a94b39bee2af26917795fc83c9f&=&format=webp&quality=lossless&width=550&height=275"/>
+
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio</title>
