--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:description" content="Bienvenidos a mi portafolio">
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://portafoliolucassanchez.netlify.app"/>
-    <meta property="og:image" content="/src/assets/images/Portada web.png"/>
+    <meta property="og:image" content="https://ibb.co/BNHChNk"/>
 
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
